2013-03-28  Jesse  <>

	* Player.cs:
	* Physics.cs:
	* Direction.cs:
	* TileId.cs:
	* TileMap.cs:
	* GREATLib.csproj:
	* ClientMessage.cs:
	* ServerMessage.cs:
	* PlayerAnimation.cs:
	* Champion.cs:
	* ChampionTypes.cs:
	* AnimationInfo.cs:
	* StickmanChampion.cs: 

2013-03-20  Jesse  <${AuthorEmail}>

	* Physics.cs:
	* TileId.cs:
	* TileMap.cs:
	* GREATLib.csproj:
	* GeneralHelper.cs:
	* Champion.cs:
	* StickmanChampion.cs: 

2013-03-19  Jesse  <${AuthorEmail}>

	* Player.cs:
	* Physics.cs:
	* GREATLib.csproj:
	* Champion.cs:
	* ChampionTypes.cs:
	* AnimationInfo.cs:
	* CharacterTypes.cs:
	* StickmanChampion.cs: 

2013-03-19  Jesse  <${AuthorEmail}>

	* Player.cs:
	* Physics.cs:
	* GREATLib.csproj:
	* PlayerAnimation.cs: 

2013-03-18  Jesse  <${AuthorEmail}>

	* Vec2.cs: 

2013-03-18  Jesse  <${AuthorEmail}>

	* Player.cs:
	* Physics.cs:
	* Direction.cs:
	* GREATLib.csproj:
	* ServerMessage.cs: 

2013-03-18  Jesse  <${AuthorEmail}>

	* Vec2.cs:
	* Player.cs:
	* AssemblyInfo.cs:
	* GREATLib.csproj:
	* ClientMessage.cs:
	* ServerMessage.cs: 
